# way-of-the-samurai

./: .gitattributes  .gitignore  ASSETS_LICENSE.md  ATTRIBUTION.md  LICENSE  README.md  pyproject.toml
.github/workflows/: ci.yml
src/game/: main.py  samurai_game.py  settings.py
src/game/core/: animation.py  app.py  assets.py  scene_manager.py
src/game/entities/: base.py  enemy.py  samurai.py
src/game/gfx/: camera.py
src/game/scenes/: gameplay.py  menu.py
src/game/ui/: hud.py
