[build-system]
requires = ["setuptools>=68"]
build-backend = "setuptools.build_meta"

[project]
name = "way-of-the-samurai"
version = "0.1.0"
description = "A portfolio-grade Pygame project with scenes, entities, and animations."
readme = "README.md"
requires-python = ">=3.10"
dependencies = [
    "pygame>=2.6.1",
]

[project.scripts]
way-of-the-samurai = "game.main:main"
